--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="Images\personal.jpg" alt="Image not found">
+                <img src="personal.jpg" alt="Image not found">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -157,7 +157,7 @@
                     <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
                 </div>
-                <a href="Images\khushbu Resume.jpg" download class="btn btn2">Download CV</a>
+                <a href="khushbu Resume.jpg" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
